<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ededed"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/frontSideTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:text="@string/front_side"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/frontCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/frontSideTV">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/card_background">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileIV"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/profile"
                app:civ_border_color="#012641"
                app:civ_border_width="1dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:text="@string/name"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/profileIV"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/designationTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/designation"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/profileIV"
                app:layout_constraintTop_toBottomOf="@id/nameTV" />

            <TextView
                android:id="@+id/educationTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/education"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/profileIV"
                app:layout_constraintTop_toBottomOf="@id/designationTV" />

            <ImageView
                android:id="@+id/callIV"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/call_des"
                android:src="@drawable/baseline_call_24"
                app:layout_constraintStart_toEndOf="@id/profileIV"
                app:layout_constraintTop_toBottomOf="@id/educationTV" />

            <TextView
                android:id="@+id/callTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/mobile_number"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/callIV"
                app:layout_constraintTop_toBottomOf="@id/educationTV" />


            <LinearLayout
                android:gravity="end"
                android:id="@+id/callALL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toEndOf="@id/callTV"
                app:layout_constraintTop_toBottomOf="@id/educationTV">

                <ImageView
                    android:id="@+id/callAIV"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="end"
                    android:background="@drawable/circle_bg"
                    android:contentDescription="@string/call_des"
                    android:padding="3dp"
                    android:src="@drawable/baseline_call_24" />


            </LinearLayout>

            <ImageView
                android:id="@+id/emailIV"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/email_icon"
                android:src="@drawable/baseline_email_24"
                app:layout_constraintStart_toEndOf="@id/profileIV"
                app:layout_constraintTop_toBottomOf="@id/callIV" />

            <TextView
                android:id="@+id/emailTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/profileIV"
                app:layout_constraintStart_toStartOf="@id/emailIV"
                app:layout_constraintTop_toBottomOf="@id/callIV" />

            <LinearLayout
                android:id="@+id/emailALL"
                android:layout_width="0dp"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/emailTV"
                app:layout_constraintTop_toBottomOf="@id/callALL">

                <ImageView
                    android:id="@+id/emailAIV"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="end"
                    android:background="@drawable/circle_bg"
                    android:contentDescription="@string/call_des"
                    android:padding="3dp"
                    android:src="@drawable/baseline_email_24" />


            </LinearLayout>


            <ImageView
                android:id="@+id/addressIV"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/baseline_location_on_24"
                app:layout_constraintStart_toEndOf="@id/profileIV"
                app:layout_constraintTop_toBottomOf="@id/emailIV" />

            <TextView
                android:id="@+id/locationTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/address"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/profileIV"
                app:layout_constraintStart_toStartOf="@id/addressIV"
                app:layout_constraintTop_toBottomOf="@id/emailIV" />

            <LinearLayout
                android:layout_marginEnd="10dp"
                android:id="@+id/mapALL"
                android:layout_marginTop="5dp"
                android:layout_width="0dp"
                android:gravity="end"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/locationTV"
                app:layout_constraintTop_toBottomOf="@id/emailALL">

                <ImageView
                    android:padding="3dp"
                    android:id="@+id/mapAIV"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="end"
                    android:background="@drawable/circle_bg"
                    android:contentDescription="@string/call_des"
                    android:src="@drawable/baseline_map_24" />


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/backSideTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:text="@string/back_side"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frontCV" />


    <androidx.cardview.widget.CardView
        android:id="@+id/backCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="#ffffff"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/backSideTV">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/ofcLogoIV"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:contentDescription="@string/office_logo"
                android:src="@drawable/cwl_logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ofcLocTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/ofc_address"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ofcLogoIV" />

            <LinearLayout
                android:layout_marginEnd="10dp"
                android:id="@+id/ofcLocLL"
                android:layout_marginTop="5dp"
                app:layout_constraintHorizontal_bias="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ofcLocTV">

                <ImageView
                    android:padding="3dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="end"
                    android:background="@drawable/circle_bg"
                    android:contentDescription="@string/call_des"
                    android:src="@drawable/baseline_map_24" />


            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:onClick="shareInfo"
        android:layout_margin="10dp"
        android:text="@string/share"
        app:layout_constraintTop_toBottomOf="@id/backCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>